ADD: search input and footer

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Busca Kitsu</title>
-    <link rel="shortcut icon" href="favicon.png">
+
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/search.css">
+    <link rel="stylesheet" href="css/footer.css">
 </head>
 
 <body>
@@ -35,6 +37,20 @@
 
     </header>
     <!-- ! Header -->
+
+    <!-- Search -->
+    <div class="search">
+        <label>
+            Nome do Personagem
+        </label>
+        <input />
+    </div>
+    <!-- ! Search -->
+
+    <!-- Footer -->
+    <footer>
+    </footer>
+    <!-- ! Footer -->
 
 </body>
 
