ADD: character list

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/search.css">
+    <link rel="stylesheet" href="css/table.css">
     <link rel="stylesheet" href="css/footer.css">
 </head>
 
@@ -21,7 +22,7 @@
         <!-- Title -->
         <div>
             <h2 class="title">
-                BUSCA MARVEL
+                BUSCA KITSU
             </h2>
             <h2>
                 TESTE FRONT-END
@@ -46,6 +47,41 @@
         <input />
     </div>
     <!-- ! Search -->
+
+    <!-- Character list -->
+    <div class="table">
+
+        <table>
+
+            <!-- Table header -->
+            <tr>
+                <th>
+                    Personagem
+                </th>
+                <th>
+                    Descrição
+                </th>
+            </tr>
+            <!-- ! Table header -->
+
+            <!-- Table data-->
+            <tr class="character">
+                <td>
+                    <img />
+                    <h3>
+                        Tony Stark
+                    </h3>
+                </td>
+                <td>
+                    <h3>
+                        Lorem ipsum dolor sit amet, eu qui fastidii conceptam, id elitr explicari mei, ei nec fabellas scribentur. Ea mei fastidii noluisse sensibus, ut aliquip tamquam definitionem est. Vel sonet munere dolores ei, affert legimus vix et, altera postea nostrum sea ne. Ad mazim debet consetetur duo.
+                    </h3>
+                </td>
+            </tr>
+            <!-- ! Table data-->
+        </table>
+    </div>
+    <!-- ! Character list -->
 
     <!-- Footer -->
     <footer>
