ADD: basic pagination layout

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/search.css">
     <link rel="stylesheet" href="css/table.css">
+    <link rel="stylesheet" href="css/pagination.css">
     <link rel="stylesheet" href="css/footer.css">
 </head>
 
@@ -79,9 +80,24 @@
                 </td>
             </tr>
             <!-- ! Table data-->
+
         </table>
+
     </div>
     <!-- ! Character list -->
+
+    <!-- Pagination -->
+    <div class="default-flex-center pagination">
+        <div class="arrow arrow-left"></div>
+        <div class="default-flex-center page-number">1</div>
+        <div class="default-flex-center page-number">2</div>
+        <div class="default-flex-center page-number">3</div>
+        <div class="default-flex-center page-number">4</div>
+        <div class="default-flex-center page-number">5</div>
+        <div class="default-flex-center page-number">6</div>
+        <div class="arrow arrow-right"></div>
+    </div>
+    <!-- ! Pagination -->
 
     <!-- Footer -->
     <footer>
