--- a/index.html
+++ b/index.html
@@ -55,30 +55,21 @@
         <table>
 
             <!-- Table header -->
-            <tr>
-                <th>
-                    Personagem
-                </th>
-                <th>
-                    Descrição
-                </th>
-            </tr>
+            <thead>
+                <tr>
+                    <th>
+                        Personagem
+                    </th>
+                    <th>
+                        Descrição
+                    </th>
+                </tr>
+            </thead>
             <!-- ! Table header -->
 
             <!-- Table data-->
-            <tr class="character">
-                <td>
-                    <img />
-                    <h3>
-                        Tony Stark
-                    </h3>
-                </td>
-                <td>
-                    <h3>
-                        Lorem ipsum dolor sit amet, eu qui fastidii conceptam, id elitr explicari mei, ei nec fabellas scribentur. Ea mei fastidii noluisse sensibus, ut aliquip tamquam definitionem est. Vel sonet munere dolores ei, affert legimus vix et, altera postea nostrum sea ne. Ad mazim debet consetetur duo.
-                    </h3>
-                </td>
-            </tr>
+            <tbody>
+            </tbody>
             <!-- ! Table data-->
 
         </table>
@@ -105,6 +96,10 @@
     <!-- ! Footer -->
 
     <!-- Scripts -->
+    <script src="js/models/kitsu-model.js"></script>
+    <script src="js/controllers/kitsu-controller.js"></script>
+    <script src="js/views/kitsu-view.js"></script>
+    <script src="js/app.js"></script>
     <!--! Scripts -->
 
 </body>
