--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/search.css">
     <link rel="stylesheet" href="css/table.css">
+    <link rel="stylesheet" href="css/loader.css">
     <link rel="stylesheet" href="css/pagination.css">
     <link rel="stylesheet" href="css/footer.css">
 </head>
@@ -57,7 +58,7 @@
             <!-- Table header -->
             <thead>
                 <tr>
-                    <th>
+                    <th id="firstTableColumn">
                         Personagem
                     </th>
                     <th>
@@ -68,7 +69,7 @@
             <!-- ! Table header -->
 
             <!-- Table data-->
-            <tbody>
+            <tbody id="tableData">
             </tbody>
             <!-- ! Table data-->
 
@@ -77,16 +78,19 @@
     </div>
     <!-- ! Character list -->
 
+    <!-- Loader -->
+    <div id="loader" class="spinner">
+        <div class="bounce1"></div>
+        <div class="bounce2"></div>
+        <div class="bounce3"></div>
+    </div>
+    <!-- ! Loader -->
+
     <!-- Pagination -->
     <div class="default-flex-center pagination">
-        <div class="arrow arrow-left"></div>
-        <div class="default-flex-center page-number">1</div>
-        <div class="default-flex-center page-number">2</div>
-        <div class="default-flex-center page-number">3</div>
-        <div class="default-flex-center page-number">4</div>
-        <div class="default-flex-center page-number">5</div>
-        <div class="default-flex-center page-number">6</div>
-        <div class="arrow arrow-right"></div>
+        <div id="arrowLeft" class="arrow arrow-left"></div>
+        <div id="pages"></div>
+        <div id="arrowRight" class="arrow arrow-right"></div>
     </div>
     <!-- ! Pagination -->
 
@@ -96,6 +100,7 @@
     <!-- ! Footer -->
 
     <!-- Scripts -->
+    <script src="js/utils/pagination.js"></script>
     <script src="js/models/kitsu-model.js"></script>
     <script src="js/controllers/kitsu-controller.js"></script>
     <script src="js/views/kitsu-view.js"></script>
