ADD: search filter

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <label>
             Nome do Personagem
         </label>
-        <input />
+        <input id="searchInput"/>
     </div>
     <!-- ! Search -->
 
@@ -77,6 +77,10 @@
 
     </div>
     <!-- ! Character list -->
+
+    <h2 id="noDataMessage">
+        Não há personagens para exibir
+    </h2>
 
     <!-- Loader -->
     <div id="loader" class="spinner">
