--- a/index.html
+++ b/index.html
@@ -78,9 +78,11 @@
     </div>
     <!-- ! Character list -->
 
+    <!-- No data message -->
     <h2 id="noDataMessage">
         Não há personagens para exibir
     </h2>
+    <!-- ! No data message -->
 
     <!-- Loader -->
     <div id="loader" class="spinner">
